# Paired-Comparison-Program

./: CMakeLists.txt  Main.cpp  PairedComparisonApp.cpp  PairedComparisonApp.h  README.md  main.cpp  pch.h
ComparisonLib/: AnalysisView.cpp  AnalysisView.h  CMakeLists.txt  Essay.cpp  Essay.h  EssayManager.cpp  EssayManager.h  EssayView.cpp  EssayView.h  MainFrame.cpp  MainFrame.h  Pair.cpp  Pair.h  ViewComparison.cpp  ViewComparison.h  ViewHome.cpp  ViewHome.h  pch.h
Paired Comparison Executable/: PairedComparisonExampleEssays.csv
Paired Comparison Executable/xrc/: main.xrc
Tests/: CMakeLists.txt  EssayManagerTest.cpp  gtest_main.cpp
resources/: TestEssays.csv  testSave.comp
resources/xrc/: main.fbp
